--- a/MyStoreProject1/test-output/old/Default suite/classes.html
+++ b/MyStoreProject1/test-output/old/Default suite/classes.html
@@ -4,20 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.mystore.testcases.HomePageTest</td>
+<td>com.mystore.testcases.AddToCartPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>wishListTest</td>
-<td>Smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>orderHistoryandDetailsTest</td>
-<td>Smoke </td>
+<td>addToCartTest</td>
+<td>Sanity Regression </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
