--- a/MyStoreProject1/test-output/old/Default suite/methods-alphabetical.html
+++ b/MyStoreProject1/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9e7ee8">  <td>22/04/04 10:40:46</td>   <td>0</td> <td title="&lt;&lt;BaseClass.afterSuite()[pri:0, instance:com.mystore.testcases.HomePageTest@1a482e36]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="9e7ee8">  <td>22/04/04 10:40:45</td>   <td>-938</td> <td title="&gt;&gt;BaseClass.loadConfig()[pri:0, instance:com.mystore.testcases.HomePageTest@1a482e36]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1786294176</td>   <td></td> </tr>
-<tr bgcolor="9d6b9d">  <td>22/04/04 10:40:46</td>   <td>-95</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.orderHistoryandDetailsTest(java.lang.String,java.lang.String)[pri:0, instance:com.mystore.testcases.HomePageTest@1a482e36]">orderHistoryandDetailsTest</td> 
-  <td>main@1786294176</td>   <td></td> </tr>
-<tr bgcolor="9d6b9d">  <td>22/04/04 10:40:46</td>   <td>-46</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.HomePageTest@1a482e36]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="9d6b9d">  <td>22/04/04 10:40:46</td>   <td>-46</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.HomePageTest@1a482e36]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="9d6b9d">  <td>22/04/04 10:40:46</td>   <td>-41</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.mystore.testcases.HomePageTest@1a482e36]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="9d6b9d">  <td>22/04/04 10:40:46</td>   <td>-41</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.mystore.testcases.HomePageTest@1a482e36]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="9d6b9d">  <td>22/04/04 10:40:46</td>   <td>-45</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.wishListTest(java.lang.String,java.lang.String)[pri:0, instance:com.mystore.testcases.HomePageTest@1a482e36]">wishListTest</td> 
-  <td>main@1786294176</td>   <td></td> </tr>
+<tr bgcolor="9e7ee8">  <td>22/04/09 16:39:37</td>   <td>0</td> <td title="&lt;&lt;BaseClass.afterSuite()[pri:0, instance:com.mystore.testcases.AddToCartPageTest@67c27493]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@135640095</td>   <td></td> </tr>
+<tr bgcolor="9e7ee8">  <td>22/04/09 16:39:36</td>   <td>-389</td> <td title="&gt;&gt;BaseClass.loadConfig()[pri:0, instance:com.mystore.testcases.AddToCartPageTest@67c27493]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@135640095</td>   <td></td> </tr>
 </table>
