--- a/MyStoreProject1/test-output/old/Suite/methods-alphabetical.html
+++ b/MyStoreProject1/test-output/old/Suite/methods-alphabetical.html
@@ -1,26 +1,44 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e5fc98">  <td>22/04/06 14:41:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddToCartPageTest.addToCartTest()[pri:0, instance:com.mystore.testcases.AddToCartPageTest@4e50c791]">addToCartTest</td> 
-  <td>main@360207322</td>   <td></td> </tr>
-<tr bgcolor="7479c6">  <td>22/04/06 14:41:14</td>   <td>6982</td> <td title="&lt;&lt;BaseClass.afterSuite()[pri:0, instance:com.mystore.testcases.LoginPageTest@34a3d150]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@360207322</td>   <td></td> </tr>
-<tr bgcolor="93938a">  <td>22/04/06 14:40:40</td>   <td>-27045</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EndToEndTest.endToEndTest()[pri:0, instance:com.mystore.testcases.EndToEndTest@4c583ecf]">endToEndTest</td> 
-  <td>main@360207322</td>   <td></td> </tr>
-<tr bgcolor="7479c6">  <td>22/04/06 14:40:37</td>   <td>-29785</td> <td title="&gt;&gt;BaseClass.loadConfig()[pri:0, instance:com.mystore.testcases.LoginPageTest@34a3d150]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@360207322</td>   <td></td> </tr>
-<tr bgcolor="93938a">  <td>22/04/06 14:40:37</td>   <td>-29560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EndToEndTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.EndToEndTest@4c583ecf]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@360207322</td>   <td></td> </tr>
-<tr bgcolor="fe63b9">  <td>22/04/06 14:40:51</td>   <td>-16071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OrderPageTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.OrderPageTest@1e66f1f5]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@360207322</td>   <td></td> </tr>
-<tr bgcolor="e5fc98">  <td>22/04/06 14:41:03</td>   <td>-3556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddToCartPageTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.AddToCartPageTest@4e50c791]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@360207322</td>   <td></td> </tr>
-<tr bgcolor="93938a">  <td>22/04/06 14:40:50</td>   <td>-16736</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EndToEndTest.tearDown()[pri:0, instance:com.mystore.testcases.EndToEndTest@4c583ecf]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@360207322</td>   <td></td> </tr>
-<tr bgcolor="e5fc98">  <td>22/04/06 14:41:13</td>   <td>6249</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddToCartPageTest.tearDown()[pri:0, instance:com.mystore.testcases.AddToCartPageTest@4e50c791]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@360207322</td>   <td></td> </tr>
-<tr bgcolor="fe63b9">  <td>22/04/06 14:41:03</td>   <td>-4195</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;OrderPageTest.tearDown()[pri:0, instance:com.mystore.testcases.OrderPageTest@1e66f1f5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@360207322</td>   <td></td> </tr>
-<tr bgcolor="fe63b9">  <td>22/04/06 14:40:54</td>   <td>-12706</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderPageTest.verifyTotalPrice()[pri:0, instance:com.mystore.testcases.OrderPageTest@1e66f1f5]">verifyTotalPrice</td> 
-  <td>main@360207322</td>   <td></td> </tr>
+<tr bgcolor="6c77c7">  <td>22/04/10 13:02:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddToCartPageTest.addToCartTest(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.mystore.testcases.AddToCartPageTest@707194ba]">addToCartTest</td> 
+  <td>main@1729779847</td>   <td></td> </tr>
+<tr bgcolor="f4d588">  <td>22/04/10 13:02:39</td>   <td>5244</td> <td title="&lt;&lt;BaseClass.afterSuite()[pri:0, instance:com.mystore.testcases.LoginPageTest@55141def]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1729779847</td>   <td></td> </tr>
+<tr bgcolor="c2937c">  <td>22/04/10 13:02:11</td>   <td>-23189</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountCreationPageTest.createAccountTest(java.util.HashMap)[pri:0, instance:com.mystore.testcases.AccountCreationPageTest@7b98f307]">createAccountTest</td> 
+  <td>main@1729779847</td>   <td></td> </tr>
+<tr bgcolor="c2937c">  <td>22/04/10 13:02:11</td>   <td>-23189</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountCreationPageTest.createAccountTest(java.util.HashMap)[pri:0, instance:com.mystore.testcases.AccountCreationPageTest@7b98f307]">createAccountTest</td> 
+  <td>main@1729779847</td>   <td></td> </tr>
+<tr bgcolor="c2937c">  <td>22/04/10 13:02:11</td>   <td>-23189</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountCreationPageTest.createAccountTest(java.util.HashMap)[pri:0, instance:com.mystore.testcases.AccountCreationPageTest@7b98f307]">createAccountTest</td> 
+  <td>main@1729779847</td>   <td></td> </tr>
+<tr bgcolor="d076c9">  <td>22/04/10 13:01:18</td>   <td>-75519</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EndToEndTest.endToEndTest(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.mystore.testcases.EndToEndTest@71d44a3]">endToEndTest</td> 
+  <td>main@1729779847</td>   <td></td> </tr>
+<tr bgcolor="f4d588">  <td>22/04/10 13:01:11</td>   <td>-83146</td> <td title="&gt;&gt;BaseClass.loadConfig()[pri:0, instance:com.mystore.testcases.LoginPageTest@55141def]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1729779847</td>   <td></td> </tr>
+<tr bgcolor="c2937c">  <td>22/04/10 13:02:08</td>   <td>-26180</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountCreationPageTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.AccountCreationPageTest@7b98f307]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1729779847</td>   <td></td> </tr>
+<tr bgcolor="aaecc3">  <td>22/04/10 13:02:18</td>   <td>-15577</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OrderPageTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.OrderPageTest@75db5df9]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1729779847</td>   <td></td> </tr>
+<tr bgcolor="6c77c7">  <td>22/04/10 13:02:31</td>   <td>-2974</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddToCartPageTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.AddToCartPageTest@707194ba]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1729779847</td>   <td></td> </tr>
+<tr bgcolor="c2937c">  <td>22/04/10 13:02:08</td>   <td>-26180</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountCreationPageTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.AccountCreationPageTest@7b98f307]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1729779847</td>   <td></td> </tr>
+<tr bgcolor="d076c9">  <td>22/04/10 13:01:12</td>   <td>-81907</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EndToEndTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.EndToEndTest@71d44a3]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1729779847</td>   <td></td> </tr>
+<tr bgcolor="c2937c">  <td>22/04/10 13:02:08</td>   <td>-26180</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountCreationPageTest.setup(java.lang.String)[pri:0, instance:com.mystore.testcases.AccountCreationPageTest@7b98f307]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1729779847</td>   <td></td> </tr>
+<tr bgcolor="6c77c7">  <td>22/04/10 13:02:38</td>   <td>4548</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddToCartPageTest.tearDown()[pri:0, instance:com.mystore.testcases.AddToCartPageTest@707194ba]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1729779847</td>   <td></td> </tr>
+<tr bgcolor="c2937c">  <td>22/04/10 13:02:17</td>   <td>-16339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountCreationPageTest.tearDown()[pri:0, instance:com.mystore.testcases.AccountCreationPageTest@7b98f307]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1729779847</td>   <td></td> </tr>
+<tr bgcolor="c2937c">  <td>22/04/10 13:02:17</td>   <td>-16339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountCreationPageTest.tearDown()[pri:0, instance:com.mystore.testcases.AccountCreationPageTest@7b98f307]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1729779847</td>   <td></td> </tr>
+<tr bgcolor="d076c9">  <td>22/04/10 13:01:43</td>   <td>-50599</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EndToEndTest.tearDown()[pri:0, instance:com.mystore.testcases.EndToEndTest@71d44a3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1729779847</td>   <td></td> </tr>
+<tr bgcolor="aaecc3">  <td>22/04/10 13:02:30</td>   <td>-3723</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;OrderPageTest.tearDown()[pri:0, instance:com.mystore.testcases.OrderPageTest@75db5df9]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1729779847</td>   <td></td> </tr>
+<tr bgcolor="c2937c">  <td>22/04/10 13:02:17</td>   <td>-16339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountCreationPageTest.tearDown()[pri:0, instance:com.mystore.testcases.AccountCreationPageTest@7b98f307]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1729779847</td>   <td></td> </tr>
+<tr bgcolor="aaecc3">  <td>22/04/10 13:02:21</td>   <td>-12282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderPageTest.verifyTotalPrice(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.mystore.testcases.OrderPageTest@75db5df9]">verifyTotalPrice</td> 
+  <td>main@1729779847</td>   <td></td> </tr>
 </table>
